<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">myME Admin Portal</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="uname_hint">User Name</string>
    <string name="pwd_hint">Password</string>
    <string name="login">Login</string>
    <string name="App">Login Application</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="status">...</string>
    <string name="loginStatus">Successful Login</string>
    <string name="title_activity_display_student">DisplayStudent</string>
    <string name="login_title">myME Admin Portal</string>
    <string name="Add_New">Add New Student</string>
    <string name="show_inactive">Show Inactive List</string>
    <string name="edit">Edit Studetn</string>
    <string name="delete">Delete Student</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name : </string>
    <string name="address">Address : </string>
    <string name="dob">Date Of Birth : </string>
    <string name="contact">Contact : </string>
    <string name="remark">Remark : </string>
    <string name="nrcno">NRC No : </string>
    <string name="location">Location : </string>
    <string name="township">Township :</string>
    <string name="city">City :</string>
    <string name="fanthername">Father Name : </string>
    <string name="fathernrc">Father NRC : </string>
    <string name="mothername">Mother Name : </string>
    <string name="mothernrc">Mother NRC : </string>
    <string name="save">Save </string>
    <string name="cancel">cancel</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="gender">Gender : </string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>

    <string name="detail">Detail >></string>
    <string name="course">Course : </string>
    <string name="subject">Subject</string>
    <string name="class_name">Class : </string>
    <string name="level">Level :</string>
    <string name="lesson">Lesson: </string>
    <string name="date">Date : </string>
    <string name="stime">Start Time : </string>
    <string name="etime">End TIme : </string>
    <string name="teacher">Teacher : </string>
    <string name="vehicle">Vehicle : </string>
    <string name="driver">Driver Name : </string>
    <string name="caddress">Contact Address : </string>
    <string name="cphone">Contact Phone : </string>
    <string name="user">User : </string>

    <string name="coursebtn">Course</string>
    <string name="schedulebtn">Schedule</string>
    <string name="stubtn">Student</string>

    <string name="attendance">Attendance</string>

    <string name="student">Student :</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="activate">Activate</string>
    <string name="bvr_rcd">Behaviour Record</string>
    <string name="behaviour">Behaviour</string>
    <string name="next">Next</string>

    <string name="prestu">Present Student : </string>
    <string name="bvr_avg">Behaviour Average : </string>

    <string name="comment">Comment </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_schedule_display">Schedule Detail</string>
    <string name="title_activity_class_display">ClassDisplay</string>
    <string name="title_activity_course_display">CourseDisplay</string>
    <string name="title_activity_attendance">AttendanceActivity</string>
    <string name="title_activity_attendance_option">AttendanceOptionActivity</string>
    <string name="title_activity_attendance_info">AttendanceInfo</string>
    <string name="title_activity_driver_home">Driver Home</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="finish">Finish</string>
    <string name="title_activity_driver_home_">DriverHome_Activity</string>
    <string name="title_activity_schedule__tab">Schedule_Tab</string>
    <string name="title_activity_noti__tab">Noti_Tab</string>
    <string name="title_activity_add_vehicle_usage_">Add Vehicle Usage</string>

    <string name="start_odometer">Start Odometer :</string>
    <string name="add_location">Add Location : </string>
    <string name="end_odometer">End Odometer :</string>
    <string name="end_job">End Job :</string>
    <string name="done">Done</string>
    <string name="locationlist">Location List</string>
    <string name="spinner_title">Vehicle</string>
    <string name="coolant">Coolant</string>
    <string name="oil">Oil</string>
    <string name="air">Air Con</string>
    <string name="engoil">Engine Oil</string>
    <string name="carbdy">Car Body</string>
    <string name="brake">Brake</string>
    <string name="light">Signal Light</string>
    <string name="fblight">Front and Back Light</string>
    <string name="wheel">Wheel</string>
    <string name="serice">Servicing</string>
    <string name="view_location">View Locations</string>
    <string name="title_activity_add_vehicle_maintenance_">Add Vehicle Maintenance</string>
    <string name="title_activity_vehicle_maintenance">VehicleMaintenance</string>
    <string name="title_activity_attendance_record_">Attendance Record</string>
    <string name="title_activity_noti_">Noti_Activity</string>
</resources>

